infra/argocd/lgtm/deployment.yaml
# this is intended for demo / testing purposes only, not for production usage
apiVersion: v1
kind: Service
metadata:
  name: lgtm
spec:
  selector:
    app: lgtm
  ports:
    - name: grafana
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: otel-grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: otel-http
      protocol: TCP
      port: 4318
      targetPort: 4318
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgtm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lgtm
  template:
    metadata:
      labels:
        app: lgtm
    spec:
      containers:
        - name: lgtm
          image: grafana/otel-lgtm:latest
          ports:
            - containerPort: 3000
            - containerPort: 4317
            - containerPort: 4318
          readinessProbe:
            exec:
              command:
                - cat
                - /tmp/ready
          volumeMounts:
            - name: tempo-data
              mountPath: /data/tempo
            - name: grafana-data
              mountPath: /data/grafana
            - name: loki-data
              mountPath: /data/loki
            - name: loki-storage
              mountPath: /loki
            - name: p8s-storage
              mountPath: /data/prometheus
            - name: pyroscope-storage
              mountPath: /data/pyroscope
      volumes:
        - name: tempo-data
          emptyDir: {}
        - name: loki-data
          emptyDir: {}
        - name: grafana-data
          emptyDir: {}
        - name: loki-storage
          emptyDir: {}
        - name: p8s-storage
          emptyDir: {}
        - name: pyroscope-storage
          emptyDir: {}
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: k6-tracing
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: k6-tracing
#   template:
#     metadata:
#       labels:
#         app: k6-tracing
#     spec:
#       containers:
#         - name: k6-tracing
#           image: ghcr.io/grafana/xk6-client-tracing:v0.0.7
#           env:
#           - name: ENDPOINT
#             value: lgtm.observability:4317
