infra/argocd/lgtm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lgtm
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
  - host: feedme-lgtm.adhshr.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lgtm
            port:
              number: 3000
